# otlp-psqlpy

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yml
otlp_psqlpy/: __init__.py  package.py
