[tool.poetry]
name = "otlp-psqlpy"
version = "0.1.0"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <chandr@chandr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-instrumentation = "^0.51b0"
psqlpy = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
